<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WaterTracking">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/action_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_tracking"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/action_image"
            app:layout_constraintLeft_toLeftOf="@+id/action_image"
            app:layout_constraintRight_toRightOf="@+id/action_image"
            app:layout_constraintTop_toTopOf="@+id/action_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:onClick="LeadershipActivity"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_networking" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/top_leadership"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You drink  "
            android:textSize="@dimen/twenty_sp" />

        <TextView
            android:id="@+id/glassesWaterDrinked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 "
            android:textColor="@color/green"
            android:textSize="@dimen/twenty_sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_glass_water" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" of water"
            android:textSize="@dimen/twenty_sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You still need to drink  "
            android:textSize="@dimen/twenty_sp" />

        <TextView
            android:id="@+id/glassesWaterNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8 "
            android:textColor="@color/red"
            android:textSize="@dimen/twenty_sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_glass_water" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" of water"
            android:textSize="@dimen/twenty_sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/timerTextView"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"
        android:text="04:00:00"
        android:textSize="40sp"
        android:textColor="@color/blueviolet"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="drink200MLButton"
        android:background="@drawable/angle"
        android:text="@string/drink_200ml"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_sp" />

</LinearLayout>